fix: security hardening, bug fixes, and quality improvements across full stack
Key changes:
- SecurityConfig: CORS wildcard patterns (setAllowedOriginPatterns) to support
  any localhost port — fixes browser login when Vite binds :5174 instead of :5173
- GlobalExceptionHandler: handle DisabledException/LockedException → 401
  ACCOUNT_INACTIVE instead of 500 (Spring Security throws before UserService check)
- EmailVerificationRepository: add deleteByUserId for FK-safe user deletion
- AdminService.deleteUser: delete EmailVerification rows before User row
- JwtUtil/JwtAuthFilter: dual-audience tokens (auth vs change-password)
- UserService: admin-create flow, placement completion, first-login password change
- CertificateService: PDF generation with iText, public certificate verification
- OtpService: rate-limited OTP with attempt tracking and expiry
- AdminService: audit logging, user stats aggregation, temp password reset
- AuditLog entity + repository + service (new)
- ExamService: epsilon comparison for accuracy (avoids float precision failures)
- PlacementService: WPM-based tier recommendation

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>